Update to AssertJ 3.9.1 which no longer uses CGLIB
This lets you remove the "--add-opens" configuration from the
surefire plugin in order to avoid the illegal reflection warning.
(And which in the ea release was required for it to run at all
since that release was more strict than the final JDK 9 release on
reflective access)